--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "webpackapp",
+  "name": "calc_module",
   "description": "A React.js project using Webpack",
   "version": "1.0.0",
   "author": "danieldyachenko",
   "scripts": {
-    "dev": "../../webpack/node_modules/.bin/webpack-dev-server --hot --open",
-    "build": "../../webpack/node_modules/.bin/webpack"
+    "dev": "webpack-dev-server --hot --open",
+    "build": "webpack"
   },
   "dependencies": {
     "react": "^16.5.0",
@@ -13,9 +13,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
-    "babel-loader": "^8.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "css-loader": "^3.5.3",
+    "style-loader": "^1.2.1",
     "webpack": "^4.20.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
